--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion '27.0.3'
     defaultConfig {
-        applicationId "training.edu.droidbountyhunter"
+        applicationId "edu.training.droidbountyhunter"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
